# dressing-in-order

./: .gitignore  demo.ipynb  pyproject.toml
dior/datasets/: __init__.py  deepfashion_datasets.py
dior/models/: __init__.py  dior_base_model.py  dior_model.py  external_functions.py  flow_model.py
dior/models/networks/: base_networks.py  discriminators.py  generators.py
dior/options/: base_options.py
dior/scripts/: generate_all.py  train.py
dior/tools/: download_deepfashion_from_google_drive.py  metrics.py
dior/utils/: pose_utils.py  train_utils.py
